interfaz usuario y roles

--- a/WebLegemClient/src/app/administracion/administracion.tmpl.html
+++ b/WebLegemClient/src/app/administracion/administracion.tmpl.html
@@ -6,7 +6,8 @@
         <label class="titulo">Administración</label>
         <div class="contenedor_tabs">
             <ul>
-                <li ng-class="vm.$state.current.name =='administracion.tipo-documento' ? 'active_tab' : ''" ui-sref="administracion.tipo-documento" ng-click="vm.activo($event)">
+                <li ng-class="vm.$state.current.name =='administracion.tipo-documento' ? 'active_tab' : ''" 
+                    ui-sref="administracion.tipo-documento" ng-click="vm.activo($event)">
                     Tipo Documento
                 </li>
                 <li ng-class="vm.$state.current.name =='administracion.tipo-entidad' ? 'active_tab' : ''"
