--- a/WebLegemClient/src/app/gestion-documental/documento/resultado.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/resultado.tmpl.html
@@ -1,14 +1,14 @@
 ﻿<div class="contenido_gd animatio ng-enter" id="holas">
     <label class="titulo">Crear Documento</label>
-    <div style="width:100%;">
+    <div style="width:100%; font-family:'Lato-Regular'">
         <label class="subtitulos_labels">
             Resultado
         </label>
         <hr class="divisor_gestion_documental" />
         <div style="display:flex; flex-direction:column; justify-content:center; align-self:center; align-content:center;">
-            <div class="texto_labels" ng-show="!vm.error && !vm.success">Trabajando</div>
-            <div class="texto_labels" ng-show="vm.success">Documento Creado Con Exito</div>
-            <div class="texto_labels" ng-show="vm.error">Error al crear el documento</div>
+            <div  ng-show="!vm.error && !vm.success"><p class="texto_labels">Trabajando</p></div>
+            <div  ng-show="vm.success"><p class="texto_labels"> Documento Creado Con Exito</p></div>
+            <div  ng-show="vm.error"><p class="texto_labels">Error al crear el documento</p></div>
             <br />
             <button type="button"
                     ng-show="vm.error || vm.success"
