--- a/WebLegemClient/src/css/elementos/input_text.css
+++ b/WebLegemClient/src/css/elementos/input_text.css
@@ -2,7 +2,8 @@
 /*----------------------------------------*/
 .a_input{
     width:100%;
-    margin:10px 0;
+    max-width:600px;
+    margin:0 0 10px 0;
     line-height: 2.5em;
     padding: 0 10px;
     
@@ -36,5 +37,87 @@
     border:1px solid  #3f9f43; 
 }
 
+
+/*-------------Input con boton----------------*/
+
+.box_input_ico{
+    display:flex; 
+    height:35px; 
+    margin-bottom:8px;
+    margin-top:2px;
+    padding:0;
+}
+
+
+.input_text_ico{
+    -ms-flex: 1;-webkit-flex: 1;flex: 1;
+    display:block;
+    width:100%;
+    height:35px;
+    padding:0 10px;
+    border:1px solid #bbb; 
+    border-right:none;
+}
+
+.input_text_ico:focus, .input_text_ico:focus ~ button{
+    border-color:#38ba8f;
+    border-width:2px;
+}
+
+.input_text_ico:focus:hover, .input_text_ico:focus:hover ~ button{
+    border-color:#38ba8f;
+}
+
+.input_text_ico:hover, .input_text_ico:hover ~ button{
+    border-color:#999;
+}
+
+.input_text_ico:focus ~ button > span{
+    visibility:visible;
+}
+.input_text_ico:focus ~ button:hover{
+    background:rgba(0, 0, 0, 0.08);
+}
+/****************************/
+
+.btn_cancel{  
+    flex-basis:35px;
+    background:#fff;
+    display:block;
+    border:1px solid #bbb;
+    border-left:none;
+    width:100%; 
+    height:35px;
+    color:#666;
+    font-size:large;
+    font-size-adjust:-webkit- .8;
+    cursor:pointer;
+    overflow:hidden;
+}
+
+.btn_cancel:disabled{
+    background:#fff;
+}
+
+.input_text_ico:focus ~ button:active{
+    background:rgba(0, 0, 0, 0.2);
+}
+.btn_cancel span{
+    display:flex;
+    visibility:collapse;
+}
+.btn_cancel span:before {
+    height: 100%;
+    width: 100%;
+    align-self: center;
+    justify-content: center;
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/*--------- FIN Input con boton------------*/
 
 
