--- a/WebLegemClient/src/css/elementos/tabs.css
+++ b/WebLegemClient/src/css/elementos/tabs.css
@@ -1,32 +1,71 @@
 ﻿.contenedor_tabs{
     display:flex;
-    background:  #37404A;
+    justify-content:flex-start;
+    width:100%;
+    background:transparent;
+    box-shadow: inset 0 -1px 0 0 #ccc;
 }
 
 .contenedor_tabs ul{
     display:flex;
     list-style:none;
-    font-family:sans-serif;
-    color:white;
-    font-size:.8em; 
-    font-weight:600;
-    
+    font-family:"Lato-Bold";
+    color:#666;
+    font-size:.7em; 
 }
 
 .contenedor_tabs > ul > li{
-    display:flex;
-    padding:10px;
+    flex:1;
+    display:block;
+    padding:0 25px;
+
+    vertical-align:middle;
+    justify-content:center;
+    text-align:center;
+
+    line-height:4em;
+
     cursor:pointer;
     -moz-transition: ease-out .3s;
     -o-transition: ease-out .3s;
     -webkit-transition: ease-out .3s;
     transition: ease-out .3s;
-    overflow:hidden;
+    position:relative;
+    box-shadow: 
+                inset 0 -1px 0 0 #ccc,
+                inset -1px 0 0 0 #ccc;
 }
 
+.contenedor_tabs > ul > li:after{
+    content:'';
+    background:#2dbf85;
+    position:absolute;
+    top:0;
+    left:0;
+}
+
+
+.contenedor_tabs > ul > li > span{
+    display:flex;
+    pointer-events:none;
+}
+
+.contenedor_tabs > ul > li > span > a{
+    align-self:center;
+    pointer-events:none;
+}
+
+.contenedor_tabs > ul > li > span:before{
+    display:flex;
+    margin:0 10px  0 0;
+    font-size:2em;
+    align-self:center;
+}
+
+
 .contenedor_tabs > ul > li:hover {
-    background:rgba(255, 255, 255, 0.20);
-    color: white;
+    background:rgba(0, 0, 0, 0.06);
+    color:#2dbf85;
     -moz-transition: ease-in .3s;
     -o-transition: ease-in .3s;
     -webkit-transition: ease-in .3s;
@@ -35,7 +74,12 @@
 
 .contenedor_tabs > ul > li.active_tab { /*tab activa*/
     background: white;
-    color: #2a2a2a;
-    margin-top: -4px;
-    box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.60);
+    color:#2dbf85;
+    box-shadow: inset 0 1px 0 0 #ccc,
+                inset -1px 0 0 0 #ccc;
+}
+
+.contenedor_tabs > ul > li.active_tab:after { /*tab activa*/
+    height:4px;
+    width:100%;
 }
