--- a/WebLegemClient/src/css/plantillas/header2.css
+++ b/WebLegemClient/src/css/plantillas/header2.css
@@ -6,8 +6,14 @@
     justify-content: center;
     align-items: center;
     border-bottom: 2px outset rgba(4, 28, 55, 0.55);
-    background: rgba(10, 40, 81, 0.71);
+    background:rgb(13, 83, 83);
+    /*background: rgba(10, 40, 81, 0.71);*/
     top:55px;
     position:fixed;
     z-index:1;
+}
+
+.header2.solido{
+    transition:background .5s linear;
+    background:rgba(10, 40, 81, 1);
 }
