--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -1,22 +1,23 @@
-﻿.contenedor_login{
+﻿    .contenedor_login{
     width:420px;
     margin: 0 auto;
     padding: 150px 0 0 0;
 }
 
-    .contenedor_login:before {
-        content: '';
-        background-image: url('../../recursos/header/entrada.jpg');
-        background-size: cover;
-        -webkit-filter: brightness(100%);
-        filter: brightness(100%);
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-    }
+        .contenedor_login:before {
+            content: '';
+            background-image: url('../../recursos/header/entrada.jpg');
+            background-image: url('../../recursos/índice2.png');
+            background-size: cover;
+            -webkit-filter: brightness(100%);
+            filter: brightness(100%);
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
 
 .subtitulo {
     background:transparent;
