untraked files merge

--- a/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
@@ -61,7 +61,9 @@
                 <p class="texto_labels green">Estado del usuario</p>
                 <div class="contenedor_radios">
                     <input class="a_radio" id="rad1" type="radio" name="rad"><label for="rad1">Radio 1</label>
-                    <input class="a_radio" id="rad2" type="radio" name="rad"><label for="rad2">Radio 2</label>
+                    <div>
+                        <input class="a_radio" id="rad2" type="radio" name="rad"><label for="rad2">Radio 2</label>
+                    </div>
                 </div>
             </div>
         </div>
