transparencia al menu en home

--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -42,7 +42,7 @@
                     <div class="res_bus">
                         <p>Documentos encontrados</p>
                         <div>
-                            <wlegem-resultado-busqueda loquesea="vm.arregloDocs"></wlegem-resultado-busqueda>
+                            <wlegem-resultado-busqueda loquesea="vm.documentosEncontrados" predicate="vm.predicate" reverse="vm.reverse"></wlegem-resultado-busqueda>
                         </div>
                     </div>
                 </div>
