--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -1,10 +1,8 @@
 ﻿.a_news {
     background: #fff;
     width: 100%;
-    background-image: url('../../recursos/header/VIPRI-1.jpg');
-    background-image: url('../../recursos/header/beige_paper.png');
-    background:#2ec488;
-    height: 100vh;
+    background:#f7fffc;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     border-bottom: 5px solid #aaa;
@@ -17,11 +15,12 @@
     justify-content:center;
     align-content:center;
 
-    background:rgb(57, 57, 57);
-    color:#eee;
+    color:#777;
+    border-top: 10px solid #777;
+    border-bottom:1px solid #ccc;
     font-family:'Lato-Regular';
-    font-size:40px;
-    height:130px;
+    font-size:35px;
+    height:100px;
     width:100%;
     padding:0 20px;
     position:relative;
